# opentelemetry-proto-cpp

./: BUILD.bazel  WORKSPACE  devbox.json
opentelemetry/proto/metrics/v1/: metrics.proto
